feat: add Virtual Thread compatibility and documentation
- Update cashu-lib dependency from 0.11.1 to 0.12.0 (VT-ready)
- Add VT pinning detection to surefire plugin and CI workflow
- Create virtual-thread-compatibility.md documentation
- Add VT compatibility section to README

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>